# Solar-Irradiance-Forecasting

./: README.md  pyproject.toml
conf/: logging.yml
docs/source/: conf.py  index.rst
notebooks/: baseline_model.ipynb  data_profiling.ipynb
src/solar_irradiance_forecasting/: __init__.py  __main__.py  settings.py
