[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11,<3.12"
name = "solar_irradiance_forecasting"
description = "End-to-end MLOps pipeline for solar irradiance forecasting across Cameroon"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # ── Notebook & REPL ───────────────────────────────────────────
    "ipython>=8.10",
    "jupyterlab>=4.0",
    "notebook>=7.0",
    # ── Kedro core ────────────────────────────────────────────────
    "kedro~=0.19.0",
    "kedro-datasets[pandas,plotly,matplotlib,json,pickle,numpy]>=3.0",
    "kedro-viz>=9.0",
    "kedro-mlflow>=0.12.0",
    # ── Data manipulation ─────────────────────────────────────────
    "pandas>=2.0",
    "numpy>=1.26",
    "pyarrow>=14.0",                  # parquet read/write
    "fastparquet>=2023.10.1",         # alternative parquet backend
    "scipy>=1.11",                    # STL decomposition, stats tests
    # ── ML — tree models ─────────────────────────────────────────
    "scikit-learn>=1.4",
    "catboost>=1.2",
    "lightgbm>=4.1",
    "xgboost>=2.0",
    "optuna>=3.4",                    # hyperparameter search for all tree models
    "optuna-integration[lightgbm]>=3.4",
    # ── ML — deep learning ───────────────────────────────────────
    "torch>=2.1",                     # PyTorch LSTM
    "torchvision>=0.16",              # needed by some torch utilities
    # ── ML — tracking & registry ─────────────────────────────────
    "mlflow>=2.9",
    "sqlalchemy>=2.0",                # MLflow SQLite backend
    # ── Feature engineering & solar geometry ─────────────────────
    "pvlib>=0.10",                    # solar position, ET radiation — validates your Spencer formula impl
    "statsmodels>=0.14",              # STL decomposition, ADF stationarity test (Notebook 1)
    # ── Explainability ───────────────────────────────────────────
    "shap>=0.44",
    # ── Monitoring & drift detection ─────────────────────────────
    "evidently>=0.4.16",              # DataDriftPreset, ColumnDriftMetric
    # ── Orchestration ─────────────────────────────────────────────
    "prefect>=2.14",
    "prefect-docker>=0.4",            # Prefect Docker infrastructure block
    # ── Dashboard & visualization ────────────────────────────────
    "dash>=2.14",
    "dash-bootstrap-components>=1.5",
    "plotly>=5.18",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # ── Data profiling (Notebook 1) ───────────────────────────────
    "ydata-profiling>=4.6",           # automated EDA report
    # ── Database ─────────────────────────────────────────────────
    "sqlite-utils>=3.35",             # predictions store, MLflow backend
    # ── Configuration & serialization ────────────────────────────
    "pyyaml>=6.0",
    "python-dotenv>=1.0",             # local credential management
    "omegaconf>=2.3",                 # structured config (optional but useful with Kedro)
    # ── Code quality ─────────────────────────────────────────────
    "ruff>=0.2",                      # linting + formatting (replaces black + flake8)
    "pyright>=1.1",                   # static type checking
    "pre-commit>=3.6",
    # ── Testing ───────────────────────────────────────────────────
    "pytest>=7.4",
    "pytest-cov>=4.1",                # coverage reports
    "pytest-mock>=3.12",
    # ── CI utilities ─────────────────────────────────────────────
    "build>=1.0",                     # package building for Docker
    "twine>=4.0",                     # optional: publish to private registry
]

[project.scripts]
"solar-irradiance-forecasting" = "solar_irradiance_forecasting.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils>=0.20",
    "sphinx>=7.3",
    "sphinx_rtd_theme>=2.0",
    "nbsphinx>=0.9",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx_copybutton>=0.5",
    "ipykernel>=6.27",
    "Jinja2>=3.1",
    "myst-parser>=2.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.2",
    "ipykernel>=6.27",
    "ipywidgets>=8.1",
]
[tool.setuptools.dynamic]
version = {attr = "solar_irradiance_forecasting.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "solar_irradiance_forecasting"
project_name = "solar-irradiance-forecasting"
kedro_init_version = "1.3.1"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/solar_irradiance_forecasting -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long
